# coverage

./: .gitignore  README.md  REAME.md  fizzbuzz.cpp  fizzbuzz.h  fizzbuzzMain.cpp  fizzbuzzTest.cpp  makefile  run
ansible/: development-environment.yml  glstudio-prerequisites.yml  install-development-environment-localhost.sh  install-gl-studio-prerequisites-localhost.sh  install-pipeline-environment-localhost.sh  install-production-environment-localhost.sh  install-triton-application.sh  pipeline-environment.yml  production-environment.yml  triton-application.yml
cmake_example/: build.sh  configure.sh  run.sh
cmake_example/src/: CMakeLists.txt  example.cpp  example.h
cmake_example/src/mysharedlib/: CMakeLists.txt  configure.sh  mysharedlib.cpp  mysharedlib.h
cmake_example/src/mystaticlib/: CMakeLists.txt  Makefile  build.sh  mystaticlib.cpp  mystaticlib.h
